--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeareascollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeareascollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeAreasCollectionData:interface'
-    summary: 描述通过调用返回的数据的接口 `rangeAreasCollection.toJSON()`<!-- -->.
-    name: Excel.Interfaces.RangeAreasCollectionData
-    fullName: Excel.Interfaces.RangeAreasCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeAreasCollectionData#items:member'
-  - uid: 'excel!Excel.Interfaces.RangeAreasCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.RangeAreasData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeAreasCollectionData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.RangeAreasCollectionData#items~0:complex'
-    name: 'Excel.Interfaces.RangeAreasData[]'
-    fullName: 'Excel.Interfaces.RangeAreasData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.RangeAreasData:interface'
-        name: Excel.Interfaces.RangeAreasData
-        fullName: Excel.Interfaces.RangeAreasData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.RangeAreasCollectionData
+uid: excel!Excel.Interfaces.RangeAreasCollectionData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeAreasCollectionData
+summary: 描述通过调用返回的数据的接口 `rangeAreasCollection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.RangeAreasCollectionData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.RangeAreasData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RangeAreasData:interface" />[]
+metadata:
+  ms.openlocfilehash: 3ea757fd3a6f29c52be62359d8b872092c144ac7
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49342001"
