--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.settablecolumnproperties.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.settablecolumnproperties.yml
@@ -1,75 +1,61 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.SettableColumnProperties:interface'
-    summary: |-
-      表示 setColumnProperties 的输入参数。
+### YamlMime:TSType
+name: Excel.SettableColumnProperties
+uid: excel!Excel.SettableColumnProperties:interface
+package: excel!
+fullName: Excel.SettableColumnProperties
+summary: >-
+  表示 setColumnProperties 的输入参数。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.SettableColumnProperties
-    fullName: Excel.SettableColumnProperties
-    langs:
-      - typeScript
-    type: interface
-    extends:
-      - 'excel!Excel.SettableCellProperties:interface'
-    package: excel!
-    children:
-      - 'excel!Excel.SettableColumnProperties#columnHidden:member'
-      - 'excel!Excel.SettableColumnProperties#format:member'
-  - uid: 'excel!Excel.SettableColumnProperties#columnHidden:member'
-    summary: |-
-      表示`columnHidden`属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: columnHidden
-    fullName: columnHidden
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'columnHidden?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.SettableColumnProperties#format:member'
-    summary: |-
-      表示`format`属性。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: columnHidden
+  uid: excel!Excel.SettableColumnProperties#columnHidden:member
+  package: excel!
+  fullName: columnHidden
+  summary: >-
+    表示`columnHidden`属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: |-
-        format?: Excel.CellPropertiesFormat & {
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'columnHidden?: boolean;'
+    return:
+      type: boolean
+- name: format
+  uid: excel!Excel.SettableColumnProperties#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    表示`format`属性。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      format?: Excel.CellPropertiesFormat & {
+                  columnWidth?: number;
+              };
+    return:
+      type: >-
+        <xref uid="excel!Excel.CellPropertiesFormat:interface" /> & {
                     columnWidth?: number;
-                };
-      return:
-        type:
-          - 'excel!Excel.SettableColumnProperties#format~0:complex'
-references:
-  - uid: 'excel!Excel.SettableCellProperties:interface'
-    name: SettableCellProperties
-  - uid: 'excel!Excel.SettableColumnProperties#format~0:complex'
-    name: |-
-      Excel.CellPropertiesFormat & {
-                  columnWidth?: number;
-              }
-    fullName: |-
-      Excel.CellPropertiesFormat & {
-                  columnWidth?: number;
-              }
-    spec.typeScript:
-      - uid: 'excel!Excel.CellPropertiesFormat:interface'
-        name: Excel.CellPropertiesFormat
-        fullName: Excel.CellPropertiesFormat
-      - name: |2-
-           & {
-                      columnWidth?: number;
-                  }
-        fullName: |2-
-           & {
-                      columnWidth?: number;
-                  }
+                }
+extends: <xref uid="excel!Excel.SettableCellProperties:interface" />
+metadata:
+  ms.openlocfilehash: 9d137b52008cd1e182fa3b84d7d4896ea9891373
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49341847"
