--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.shapelineformat.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.shapelineformat.yml
@@ -1,283 +1,245 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ShapeLineFormat:class'
-    summary: |-
-      代表 shape 对象的线条格式。 对于图像和几何形状，线条格式表示形状的边框。
+### YamlMime:TSType
+name: Excel.ShapeLineFormat
+uid: excel!Excel.ShapeLineFormat:class
+package: excel!
+fullName: Excel.ShapeLineFormat
+summary: >-
+  代表 shape 对象的线条格式。 对于图像和几何形状，线条格式表示形状的边框。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ShapeLineFormat
-    fullName: Excel.ShapeLineFormat
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.ShapeLineFormat#color:member'
-      - 'excel!Excel.ShapeLineFormat#context:member'
-      - 'excel!Excel.ShapeLineFormat#dashStyle:member'
-      - 'excel!Excel.ShapeLineFormat#load:member(1)'
-      - 'excel!Excel.ShapeLineFormat#load:member(2)'
-      - 'excel!Excel.ShapeLineFormat#load:member(3)'
-      - 'excel!Excel.ShapeLineFormat#set:member(1)'
-      - 'excel!Excel.ShapeLineFormat#set:member(2)'
-      - 'excel!Excel.ShapeLineFormat#style:member'
-      - 'excel!Excel.ShapeLineFormat#toJSON:member(1)'
-      - 'excel!Excel.ShapeLineFormat#transparency:member'
-      - 'excel!Excel.ShapeLineFormat#visible:member'
-      - 'excel!Excel.ShapeLineFormat#weight:member'
-  - uid: 'excel!Excel.ShapeLineFormat#color:member'
-    summary: |-
-      代表 HTML 颜色格式的线条颜色，格式 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.ShapeLineFormat#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.ShapeLineFormat#dashStyle:member'
-    summary: |-
-      表示形状的线条样式。 当线条不可见或短划线样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: color
+  uid: excel!Excel.ShapeLineFormat#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    代表 HTML 颜色格式的线条颜色，格式 \# RRGGBB (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如，"橙色" ) 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: dashStyle
-    fullName: dashStyle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'dashStyle: Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot";'
-      return:
-        type:
-          - 'excel!Excel.ShapeLineFormat#dashStyle~0:complex'
-  - uid: 'excel!Excel.ShapeLineFormat#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.ShapeLineFormatLoadOptions): Excel.ShapeLineFormat;'
-      return:
-        type:
-          - 'excel!Excel.ShapeLineFormat:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions:interface'
-  - uid: 'excel!Excel.ShapeLineFormat#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.ShapeLineFormat;'
-      return:
-        type:
-          - 'excel!Excel.ShapeLineFormat:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.ShapeLineFormat#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color: string;'
+    return:
+      type: string
+- name: context
+  uid: excel!Excel.ShapeLineFormat#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: dashStyle
+  uid: excel!Excel.ShapeLineFormat#dashStyle:member
+  package: excel!
+  fullName: dashStyle
+  summary: >-
+    表示形状的线条样式。 当线条不可见或短划线样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'dashStyle: Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot";'
+    return:
+      type: <xref uid="excel!Excel.ShapeLineDashStyle:enum" /> | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"
+- name: style
+  uid: excel!Excel.ShapeLineFormat#style:member
+  package: excel!
+  fullName: style
+  summary: >-
+    表示形状的线条样式。 当线条不可见或样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style: Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin";'
+    return:
+      type: <xref uid="excel!Excel.ShapeLineStyle:enum" /> | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
+- name: transparency
+  uid: excel!Excel.ShapeLineFormat#transparency:member
+  package: excel!
+  fullName: transparency
+  summary: >-
+    将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。 当形状的透明度不一致时，返回 null。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'transparency: number;'
+    return:
+      type: number
+- name: visible
+  uid: excel!Excel.ShapeLineFormat#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定是否显示 shape 元素的线条格式。 当形状的可见性不一致时，返回 null。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible: boolean;'
+    return:
+      type: boolean
+- name: weight
+  uid: excel!Excel.ShapeLineFormat#weight:member
+  package: excel!
+  fullName: weight
+  summary: >-
+    表示线条的粗细（以磅为单位）。 当线条不可见或线条粗细不一致时，返回 null。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'weight: number;'
+    return:
+      type: number
+methods:
+- name: load(options)
+  uid: excel!Excel.ShapeLineFormat#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.ShapeLineFormatLoadOptions): Excel.ShapeLineFormat;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.ShapeLineFormatLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.ShapeLineFormat:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.ShapeLineFormat#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.ShapeLineFormat;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.ShapeLineFormat:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.ShapeLineFormat#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      load(propertyNamesAndPaths?: {
+                  select?: string;
+                  expand?: string;
+              }): Excel.ShapeLineFormat;
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: >-
+        {
                     select?: string;
                     expand?: string;
-                }): Excel.ShapeLineFormat;
-      return:
-        type:
-          - 'excel!Excel.ShapeLineFormat:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
-  - uid: 'excel!Excel.ShapeLineFormat#set:member(1)'
-    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
-    remarks: |-
-      此方法具有以下附加签名：
+                }
+    return:
+      type: <xref uid="excel!Excel.ShapeLineFormat:class" />
+      description: ''
+- name: set(properties, options)
+  uid: excel!Excel.ShapeLineFormat#set:member(1)
+  package: excel!
+  fullName: set(properties, options)
+  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  remarks: >-
+    此方法具有以下附加签名：
 
-      `set(properties: Excel.ShapeLineFormat): void`
-    name: 'set(properties, options)'
-    fullName: 'set(properties, options)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Interfaces.ShapeLineFormatUpdateData, options?: OfficeExtension.UpdateOptions): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
-          type:
-            - 'excel!Excel.Interfaces.ShapeLineFormatUpdateData:interface'
-        - id: options
-          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
-          type:
-            - 'office!OfficeExtension.UpdateOptions:interface'
-  - uid: 'excel!Excel.ShapeLineFormat#set:member(2)'
-    summary: 基于现有加载的对象同时设置该对象的多个属性。
-    name: set(properties)
-    fullName: set(properties)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Excel.ShapeLineFormat): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: ''
-          type:
-            - 'excel!Excel.ShapeLineFormat:class'
-  - uid: 'excel!Excel.ShapeLineFormat#style:member'
-    summary: |-
-      表示形状的线条样式。 当线条不可见或样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style: Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin";'
-      return:
-        type:
-          - 'excel!Excel.ShapeLineFormat#style~0:complex'
-  - uid: 'excel!Excel.ShapeLineFormat#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 ShapeLineFormat 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ShapeLineFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.ShapeLineFormatData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ShapeLineFormatData:interface'
-        description: ''
-  - uid: 'excel!Excel.ShapeLineFormat#transparency:member'
-    summary: |-
-      将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。 当形状的透明度不一致时，返回 null。
-
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: transparency
-    fullName: transparency
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'transparency: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.ShapeLineFormat#visible:member'
-    summary: |-
-      指定是否显示 shape 元素的线条格式。 当形状的可见性不一致时，返回 null。
-
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.ShapeLineFormat#weight:member'
-    summary: |-
-      表示线条的粗细（以磅为单位）。 当线条不可见或线条粗细不一致时，返回 null。
-
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: weight
-    fullName: weight
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'weight: number;'
-      return:
-        type:
-          - number
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.ShapeLineFormat#dashStyle~0:complex'
-    name: Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"
-    fullName: Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"
-    spec.typeScript:
-      - uid: 'excel!Excel.ShapeLineDashStyle:enum'
-        name: Excel.ShapeLineDashStyle
-        fullName: Excel.ShapeLineDashStyle
-      - name: ' | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"'
-        fullName: ' | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"'
-  - uid: 'excel!Excel.ShapeLineFormat:class'
-    name: Excel.ShapeLineFormat
-  - uid: 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions:interface'
-    name: Excel.Interfaces.ShapeLineFormatLoadOptions
-  - uid: 'excel!Excel.Interfaces.ShapeLineFormatUpdateData:interface'
-    name: Interfaces.ShapeLineFormatUpdateData
-  - uid: 'office!OfficeExtension.UpdateOptions:interface'
-    name: OfficeExtension.UpdateOptions
-  - uid: 'excel!Excel.ShapeLineFormat#style~0:complex'
-    name: Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
-    fullName: Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
-    spec.typeScript:
-      - uid: 'excel!Excel.ShapeLineStyle:enum'
-        name: Excel.ShapeLineStyle
-        fullName: Excel.ShapeLineStyle
-      - name: ' | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"'
-        fullName: ' | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"'
-  - uid: 'excel!Excel.Interfaces.ShapeLineFormatData:interface'
-    name: Excel.Interfaces.ShapeLineFormatData
+    `set(properties: Excel.ShapeLineFormat): void`
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Interfaces.ShapeLineFormatUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+    parameters:
+    - id: properties
+      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      type: <xref uid="excel!Excel.Interfaces.ShapeLineFormatUpdateData:interface" />
+    - id: options
+      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
+    return:
+      type: void
+      description: ''
+- name: set(properties)
+  uid: excel!Excel.ShapeLineFormat#set:member(2)
+  package: excel!
+  fullName: set(properties)
+  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Excel.ShapeLineFormat): void;'
+    parameters:
+    - id: properties
+      description: ''
+      type: <xref uid="excel!Excel.ShapeLineFormat:class" />
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.ShapeLineFormat#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始 ShapeLineFormat 对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Excel.Interfaces.ShapeLineFormatData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.ShapeLineFormatData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ShapeLineFormatData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 310054762b10e15d8272e53f94b39eef42f13f03
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49341854"
