--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.specialcellvaluetype.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.specialcellvaluetype.yml
@@ -1,146 +1,77 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.SpecialCellValueType:enum'
-    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.SpecialCellValueType
-    fullName: Excel.SpecialCellValueType
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.SpecialCellValueType.all:member'
-      - 'excel!Excel.SpecialCellValueType.errors:member'
-      - 'excel!Excel.SpecialCellValueType.errorsLogical:member'
-      - 'excel!Excel.SpecialCellValueType.errorsLogicalNumber:member'
-      - 'excel!Excel.SpecialCellValueType.errorsLogicalText:member'
-      - 'excel!Excel.SpecialCellValueType.errorsNumbers:member'
-      - 'excel!Excel.SpecialCellValueType.errorsNumberText:member'
-      - 'excel!Excel.SpecialCellValueType.errorsText:member'
-      - 'excel!Excel.SpecialCellValueType.logical:member'
-      - 'excel!Excel.SpecialCellValueType.logicalNumbers:member'
-      - 'excel!Excel.SpecialCellValueType.logicalNumbersText:member'
-      - 'excel!Excel.SpecialCellValueType.logicalText:member'
-      - 'excel!Excel.SpecialCellValueType.numbers:member'
-      - 'excel!Excel.SpecialCellValueType.numbersText:member'
-      - 'excel!Excel.SpecialCellValueType.text:member'
-  - uid: 'excel!Excel.SpecialCellValueType.all:member'
-    summary: 包含错误、true/false、数字或字符串值的单元格。
-    name: all
-    fullName: all
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"All"'
-  - uid: 'excel!Excel.SpecialCellValueType.errors:member'
-    summary: 包含错误的单元格。
-    name: errors
-    fullName: errors
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Errors"'
-  - uid: 'excel!Excel.SpecialCellValueType.errorsLogical:member'
-    summary: 包含错误的单元格，或 true/false 值。
-    name: errorsLogical
-    fullName: errorsLogical
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ErrorsLogical"'
-  - uid: 'excel!Excel.SpecialCellValueType.errorsLogicalNumber:member'
-    summary: 包含错误、true/false 或数值的单元格。
-    name: errorsLogicalNumber
-    fullName: errorsLogicalNumber
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ErrorsLogicalNumber"'
-  - uid: 'excel!Excel.SpecialCellValueType.errorsLogicalText:member'
-    summary: 包含错误、true/false 或字符串值的单元格。
-    name: errorsLogicalText
-    fullName: errorsLogicalText
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ErrorsLogicalText"'
-  - uid: 'excel!Excel.SpecialCellValueType.errorsNumbers:member'
-    summary: 包含错误的单元格或数值。
-    name: errorsNumbers
-    fullName: errorsNumbers
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ErrorsNumbers"'
-  - uid: 'excel!Excel.SpecialCellValueType.errorsNumberText:member'
-    summary: 包含错误、数字或字符串值的单元格。
-    name: errorsNumberText
-    fullName: errorsNumberText
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ErrorsNumberText"'
-  - uid: 'excel!Excel.SpecialCellValueType.errorsText:member'
-    summary: 包含错误的单元格或字符串值。
-    name: errorsText
-    fullName: errorsText
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ErrorsText"'
-  - uid: 'excel!Excel.SpecialCellValueType.logical:member'
-    summary: 具有 true/false 值的单元格。
-    name: logical
-    fullName: logical
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Logical"'
-  - uid: 'excel!Excel.SpecialCellValueType.logicalNumbers:member'
-    summary: 具有真/假或数值的单元格。
-    name: logicalNumbers
-    fullName: logicalNumbers
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"LogicalNumbers"'
-  - uid: 'excel!Excel.SpecialCellValueType.logicalNumbersText:member'
-    summary: 具有 true/false、数字或字符串值的单元格。
-    name: logicalNumbersText
-    fullName: logicalNumbersText
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"LogicalNumbersText"'
-  - uid: 'excel!Excel.SpecialCellValueType.logicalText:member'
-    summary: 具有真/假或字符串值的单元格。
-    name: logicalText
-    fullName: logicalText
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"LogicalText"'
-  - uid: 'excel!Excel.SpecialCellValueType.numbers:member'
-    summary: 具有数字值的单元格。
-    name: numbers
-    fullName: numbers
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Numbers"'
-  - uid: 'excel!Excel.SpecialCellValueType.numbersText:member'
-    summary: 具有数字的单元格，或字符串值。
-    name: numbersText
-    fullName: numbersText
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"NumbersText"'
-  - uid: 'excel!Excel.SpecialCellValueType.text:member'
-    summary: 包含字符串值的单元格。
-    name: text
-    fullName: text
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Text"'
+### YamlMime:TSEnum
+name: Excel.SpecialCellValueType
+uid: excel!Excel.SpecialCellValueType:enum
+package: excel!
+fullName: Excel.SpecialCellValueType
+summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: all
+  uid: excel!Excel.SpecialCellValueType.all:member
+  package: excel!
+  summary: 包含错误、true/false、数字或字符串值的单元格。
+- name: errors
+  uid: excel!Excel.SpecialCellValueType.errors:member
+  package: excel!
+  summary: 包含错误的单元格。
+- name: errorsLogical
+  uid: excel!Excel.SpecialCellValueType.errorsLogical:member
+  package: excel!
+  summary: 包含错误的单元格，或 true/false 值。
+- name: errorsLogicalNumber
+  uid: excel!Excel.SpecialCellValueType.errorsLogicalNumber:member
+  package: excel!
+  summary: 包含错误、true/false 或数值的单元格。
+- name: errorsLogicalText
+  uid: excel!Excel.SpecialCellValueType.errorsLogicalText:member
+  package: excel!
+  summary: 包含错误、true/false 或字符串值的单元格。
+- name: errorsNumbers
+  uid: excel!Excel.SpecialCellValueType.errorsNumbers:member
+  package: excel!
+  summary: 包含错误的单元格或数值。
+- name: errorsNumberText
+  uid: excel!Excel.SpecialCellValueType.errorsNumberText:member
+  package: excel!
+  summary: 包含错误、数字或字符串值的单元格。
+- name: errorsText
+  uid: excel!Excel.SpecialCellValueType.errorsText:member
+  package: excel!
+  summary: 包含错误的单元格或字符串值。
+- name: logical
+  uid: excel!Excel.SpecialCellValueType.logical:member
+  package: excel!
+  summary: 具有 true/false 值的单元格。
+- name: logicalNumbers
+  uid: excel!Excel.SpecialCellValueType.logicalNumbers:member
+  package: excel!
+  summary: 具有真/假或数值的单元格。
+- name: logicalNumbersText
+  uid: excel!Excel.SpecialCellValueType.logicalNumbersText:member
+  package: excel!
+  summary: 具有 true/false、数字或字符串值的单元格。
+- name: logicalText
+  uid: excel!Excel.SpecialCellValueType.logicalText:member
+  package: excel!
+  summary: 具有真/假或字符串值的单元格。
+- name: numbers
+  uid: excel!Excel.SpecialCellValueType.numbers:member
+  package: excel!
+  summary: 具有数字值的单元格。
+- name: numbersText
+  uid: excel!Excel.SpecialCellValueType.numbersText:member
+  package: excel!
+  summary: 具有数字的单元格，或字符串值。
+- name: text
+  uid: excel!Excel.SpecialCellValueType.text:member
+  package: excel!
+  summary: 包含字符串值的单元格。
+metadata:
+  ms.openlocfilehash: 17e822190ea0de89862a25af4af5fed27b97cd8e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49341714"
